# superclinic3-jnjlvk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
src/backend/: .dockerignore  .env.example  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/backend/app/: __init__.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  analytics.py  assistants.py  auth.py  campaigns.py  chats.py  integrations.py  messages.py  (+3 more)
src/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  security.py
src/backend/app/db/: __init__.py  base.py  session.py
src/backend/app/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/app/models/: __init__.py  analytics.py  assistants.py  campaigns.py  chats.py  messages.py  organizations.py  users.py
src/backend/app/schemas/: __init__.py  analytics.py  assistants.py  campaigns.py  chats.py  messages.py  organizations.py  users.py  webhooks.py
src/backend/app/services/: __init__.py  auth.py
src/backend/app/services/ai/: __init__.py  assistant_manager.py  openai_client.py  prompt_templates.py
src/backend/app/services/analytics/: __init__.py  aggregator.py  metrics.py  reports.py
src/backend/app/services/campaigns/: __init__.py  processor.py  rate_limiter.py  scheduler.py
src/backend/app/services/whatsapp/: __init__.py  business_api.py  message_handler.py  session_manager.py  web_client.py
src/backend/app/utils/: __init__.py  constants.py  helpers.py  security.py  validators.py
src/backend/scripts/: __init__.py  create_superuser.py  generate_api_docs.py  run_migrations.py  seed_database.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_analytics.py  test_assistants.py  test_auth.py  test_campaigns.py  test_chats.py  test_messages.py  test_organizations.py  test_users.py
src/backend/tests/test_services/: __init__.py  test_ai.py  test_analytics.py  test_campaigns.py  test_whatsapp.py
src/backend/tests/test_utils/: __init__.py  test_security.py  test_validators.py
(+224 files in other folders)
