[tool.poetry]
name = "porfin-backend"
version = "0.1.0"
description = "Backend service for Porfin WhatsApp automation platform with AI-powered customer engagement"
authors = ["Porfin Team"]
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11"

# Core Framework Dependencies
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
gunicorn = ">=21.2.0"

# Data Validation
pydantic = ">=2.0.0"
email-validator = ">=2.0.0"

# Database
sqlalchemy = ">=2.0.0"
alembic = ">=1.11.0"
firebase-admin = ">=6.2.0"
redis = ">=5.0.0"

# Security
python-jose = ">=3.3.0"
passlib = ">=1.7.4"
bcrypt = ">=4.0.1"
cryptography = ">=41.0.0"

# AI/ML
openai = ">=1.0.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"

# Utilities
python-multipart = ">=0.0.6"
aiohttp = ">=3.8.5"
python-dateutil = ">=2.8.2"
pytz = ">=2023.3"
pydantic-settings = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"

# Code Quality
black = ">=23.7.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.0"
isort = ">=5.12.0"
pre-commit = ">=3.3.3"
bandit = ">=1.7.5"

[tool.poetry.group.monitoring.dependencies]
# Observability
opentelemetry-api = ">=1.20.0"
opentelemetry-sdk = ">=1.20.0"
opentelemetry-instrumentation-fastapi = ">=0.41b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.41b0"
opentelemetry-instrumentation-redis = ">=0.41b0"
prometheus-client = ">=0.17.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"
extend-exclude = "/migrations/"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml"